--- a/index.html
+++ b/index.html
@@ -15,27 +15,43 @@
         canvas.width = document.documentElement.clientWidth
         canvas.height = document.documentElement.clientHeight
         let ctx = canvas.getContext("2d");
-
-        let painting = false
-
-
         ctx.fillStyle = "black";
         ctx.strokeStyle = 'none'
 
-        canvas.onmousedown = () => {
-            painting = true
+        let painting = false
+        let last
+
+        function drawLine(x1, y1, x2, y2) {
+            ctx.beginPath();
+            ctx.moveTo(x1, y1);
+            ctx.lineTo(x2, y2);
+            ctx.stroke();
         }
 
-        canvas.onmousemove = (e) => {
-            if (painting === true) {
+        var isTouchDevice = 'ontouchstart' in document.documentElement;
+        if (isTouchDevice) {
+            canvas.ontouchmove = (e) => {
+                let x = e.touches[0].clientX
+                let y = e.touches[0].clientY
                 ctx.beginPath();
                 ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
                 ctx.stroke();
                 ctx.fill();
-            } else {
-                console.log('什么都不做')
             }
-        }
+        } else {
+                canvas.onmousedown = (e) => {
+                    painting = true
+                    last = [e.clientX, e.clientY]
+                    }
+                canvas.onmousemove = (e) => {
+                    if (painting === true ){
+                       drawLine(last[0], last[1], e.clientX, e.clientY)
+                    }
+            }    
+                canvas.onmouseup = () => {
+                    painting = false
+                    }
+            }
 
         canvas.onmouseup = () => {
             painting = false
