--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         canvas.height = document.documentElement.clientHeight
         let ctx = canvas.getContext("2d");
         ctx.fillStyle = "black";
-        ctx.strokeStyle = 'none'
+        ctx.strokeStyle = 'black'
+        ctx.lineWidth = 8;
+        ctx.lineCap = "round";
 
         let painting = false
         let last
@@ -30,32 +32,32 @@
 
         var isTouchDevice = 'ontouchstart' in document.documentElement;
         if (isTouchDevice) {
-            canvas.ontouchmove = (e) => {
-                let x = e.touches[0].clientX
+            canvas.ontouchstart = (e) => {
+                let x = e.touches[0].clientX 
                 let y = e.touches[0].clientY
-                ctx.beginPath();
-                ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
-                ctx.stroke();
-                ctx.fill();
+                last = [x, y]
             }
-        } else {
+            canvas.ontouchmove = (e) => {
+                let x = e.touches[0].clientX 
+                let y = e.touches[0].clientY
+                drawLine(last[0], last[1], x, y)
+                last = [x, y]
+                }
+            } else {
                 canvas.onmousedown = (e) => {
                     painting = true
                     last = [e.clientX, e.clientY]
                     }
                 canvas.onmousemove = (e) => {
                     if (painting === true ){
-                       drawLine(last[0], last[1], e.clientX, e.clientY)
+                       drawLine(last[0], last[1], e.clientY, e.clientY)
+                    last = [e.clientY, e.clientY]
                     }
             }    
                 canvas.onmouseup = () => {
                     painting = false
                     }
             }
-
-        canvas.onmouseup = () => {
-            painting = false
-        }
     </script>
 </body>
 </html>
