--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
         let painting = false
         let last
 
-        function drawLine(x1, y1, x2, y2) {
-            ctx.beginPath();
-            ctx.moveTo(x1, y1);
-            ctx.lineTo(x2, y2);
-            ctx.stroke();
-        }
-
         var isTouchDevice = 'ontouchstart' in document.documentElement;
         if (isTouchDevice) {
             canvas.ontouchstart = (e) => {
@@ -50,14 +43,21 @@
                     }
                 canvas.onmousemove = (e) => {
                     if (painting === true ){
-                       drawLine(last[0], last[1], e.clientY, e.clientY)
-                    last = [e.clientY, e.clientY]
+                       drawLine(last[0], last[1], e.clientX, e.clientY)
+                    last = [e.clientX, e.clientY]
                     }
             }    
                 canvas.onmouseup = () => {
                     painting = false
                     }
             }
+
+            function drawLine(x1, y1, x2, y2) {
+            ctx.beginPath();
+            ctx.moveTo(x1, y1);
+            ctx.lineTo(x2, y2);
+            ctx.stroke();
+        }
     </script>
 </body>
 </html>
