--- a/index.html
+++ b/index.html
@@ -1,63 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, 
-    initial-scale=1.0, minimum-scale=1.0, 
-    maximum-scale=1.0, user-scalable=no">
-    <title>画板</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <canvas id="canvas" width="100" height="100"></canvas>
-    <script>
-        let canvas = document.getElementById("canvas");
-        canvas.width = document.documentElement.clientWidth
-        canvas.height = document.documentElement.clientHeight
-        let ctx = canvas.getContext("2d");
-        ctx.fillStyle = "black";
-        ctx.strokeStyle = 'black'
-        ctx.lineWidth = 8;
-        ctx.lineCap = "round";
-
-        let painting = false
-        let last
-
-        var isTouchDevice = 'ontouchstart' in document.documentElement;
-        if (isTouchDevice) {
-            canvas.ontouchstart = (e) => {
-                let x = e.touches[0].clientX 
-                let y = e.touches[0].clientY
-                last = [x, y]
-            }
-            canvas.ontouchmove = (e) => {
-                let x = e.touches[0].clientX 
-                let y = e.touches[0].clientY
-                drawLine(last[0], last[1], x, y)
-                last = [x, y]
-                }
-            } else {
-                canvas.onmousedown = (e) => {
-                    painting = true
-                    last = [e.clientX, e.clientY]
-                    }
-                canvas.onmousemove = (e) => {
-                    if (painting === true ){
-                       drawLine(last[0], last[1], e.clientX, e.clientY)
-                    last = [e.clientX, e.clientY]
-                    }
-            }    
-                canvas.onmouseup = () => {
-                    painting = false
-                    }
-            }
-
-            function drawLine(x1, y1, x2, y2) {
-            ctx.beginPath();
-            ctx.moveTo(x1, y1);
-            ctx.lineTo(x2, y2);
-            ctx.stroke();
-        }
-    </script>
-</body>
+<html lang="zh-Hans">
+  <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <title>我的画板</title>
+  <canvas id="xxx" width=300 height=300></canvas>
+  <div id=actions class="actions">
+    <svg id=pen class="active icon">
+      <use xlink:href="#icon-pen"></use>
+    </svg>
+    <svg id=eraser class="icon">
+      <use xlink:href="#icon-erase"></use>
+    </svg>
+    <svg id=clear class="icon">
+      <use xlink:href="#icon-clear"></use>
+    </svg>
+    <svg id=download class="icon">
+      <use xlink:href="#icon-save"></use>
+    </svg>
+  </div>
+  <ol class="colors">
+    <li id="red" class="red active"></li>
+    <li id="green" class="green"></li>
+    <li id="blue" class="blue"></li>
+  </ol>
+  <ol class="sizes">
+    <li id="thin" class="thin"></li>
+    <li id="thick" class="thick"></li>
+  </ol>
+  
+  <script src="./main.js"></script>
+  <script src="//at.alicdn.com/t/font_478967_6n4o5i5mnff4unmi.js"></script>
+  
 </html>
